# vague

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/agents/: vague-api.md  vague-core.md  vague-eval.md  vague-infra.md
.github/workflows/: ci.yml
benchmarks/: longbench.py  needle.py  results_anthropic_reduced.json  results_mlx_reduced.json  run_mlx_benchmark.py  summary_anthropic_reduced.json  summary_mlx_reduced.json  update_readme.py
docs/: project_brief.md
examples/: basic_usage.py  multiagent_demo.py
notebooks/: benchmark_analysis.ipynb
tests/: conftest.py  test_adapters.py  test_belief.py  test_memory.py  test_summary_belief.py
vague/: __init__.py  agent.py  belief.py  embedder.py  memory.py  summary_belief.py
vague/adapters/: __init__.py  anthropic.py  langgraph.py  mlx_lm.py  ollama.py  openai_compat.py
