[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vague"
version = "0.1.0"
description = "Probabilistic belief-state memory for LLM agents using Gaussian Mixture Models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["llm", "agents", "memory", "gaussian", "probabilistic", "belief-state"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.7",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.1", "langchain-core>=0.1"]
mlx = ["mlx>=0.12", "mlx-lm>=0.12"]
benchmark = [
    "datasets>=2.18",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "tiktoken>=0.6",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "vague[benchmark,langgraph]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
